charon/tests/ui/simple/fewer-clauses-in-method-impl.2.out
error: Mismatched method generics:
       params:   
       supplied: [@TraitDecl1<()>]
  --> tests/ui/simple/fewer-clauses-in-method-impl.2.rs:13:5
   |
13 |     <() as Trait>::method()
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |

thread 'rustc' panicked at src/ast/types_utils.rs:116:9:
assertion failed: args.matches(&self.params)
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
ERROR Compilation encountered 0 errors
